--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -32,6 +32,7 @@
 }
 .btn-cart{
     width: 100%;
+    padding: 15px;
     background: #FFE0B3;
     border: 1px solid #95A0A7;
     border-radius: 0px 0px 8px 8px;
